@@ -51,7 +51,7 @@ targetCompatibility = 1.8
 mainClassName = 'murphytalk.arithmetic.ArithmeticKt'
 buildscript {
     ext{
-        kotlin_version = '1.2.10'
+        kotlin_version = '1.3.21'
         sparkjava_version = '2.7.1'
     }
     repositories {
@@ -66,8 +66,11 @@ sourceSets {
     main.java.srcDirs += 'src/main/kotlin'
 }
 
+test{
+    jvmArgs '--add-exports', 'java.base/jdk.internal.vm.annotation=ALL-UNNAMED'
+}
 
-task listrepos << {
+task listrepos  {
     println "Repositories:"
     project.repositories.each { println "Name: " + it.name + "; url: " + it.url }
 }
